fix z-index

--- a/spkcspider/apps/spider/static/spidercss.css
+++ b/spkcspider/apps/spider/static/spidercss.css
@@ -23,7 +23,7 @@
 
 header.cond-top-fix{
   width:100%;
-  z-index:1;
+  z-index:50;
 }
 
 main.cond-top-fix{
